now possible to check tracks json file on localhost